# android-playground

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bell_ground_normal.json  flutter4gitlab.dex
app/src/main/cpp/: CMakeLists.txt  hotfix.cpp  io_github_stefanji_playground_TestJNIRegiester.h  jni_register.cpp  log.h  size.h  test_jni_register.cpp
app/src/main/cpp/include/: hotfix.h  size.h
app/src/main/res/drawable/: avd_anim.xml  bell_loading.xml  bg_item.xml  drawble_complete.xml
app/src/main/res/layout/: ac_animate_vector.xml  ac_camera2.xml  ac_hotfix.xml  ac_listview.xml  activity_1.xml  activity_2.xml  activity_3.xml  activity_camera.xml  activity_drawable_test.xml  activity_entrance.xml  activity_event_test.xml  activity_fragments.xml  activity_hot_fix.xml  activity_io_test.xml  activity_main.xml  activity_rv_animation.xml  activity_textview_break.xml  activity_transition_enter.xml  activity_transition_entered.xml  activity_transparent.xml  entrance_item.xml  fragment_home.xml  fragment_m_dialog.xml  fragment_test.xml  innrer_scroll_test.xml  item_list.xml
app/src/main/res/navigation/: main_navigation.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  (+2 more)
m_admin/: build.gradle
m_admin/src/main/: AndroidManifest.xml
m_comm/: build.gradle
m_comm/src/main/: AndroidManifest.xml
m_webview/: build.gradle
m_webview/src/main/: AndroidManifest.xml
m_widgets/: build.gradle
m_widgets/src/main/: AndroidManifest.xml
uml/: ViewModel.puml
(+82 files in other folders)
